--- a/Jardines2022.Web/Views/Producto/Index.cshtml
+++ b/Jardines2022.Web/Views/Producto/Index.cshtml
@@ -110,6 +110,10 @@
                             <option value="0">NO</option>
                         </select>
                     </div>
+
+                    <input type="file" class="form-control" id="imagen" accept="img/*" style="display:none" />
+
+
                     <div class="col-md-6">
                         <label for="IMGMuestra" class="form-label">Imagen de muestra</label>
                         <input type="text" disabled class="form-control" id="IMGMuestra" placeholder="...">
