--- a/Jardines2022.Web/Views/Tienda/Tienda.cshtml
+++ b/Jardines2022.Web/Views/Tienda/Tienda.cshtml
@@ -1,55 +1,53 @@
 ﻿<main class="main">
     <section id="main" class="main">
-        <div class="container-fluid px-5 my-5">
-            <div class="col-md-12 mb-4">
-                <div class="card">
-                    <div class="row mt-2 mb-2 m-2 mx-2">
-                        <h5>Filtrar productos por categorias.</h5>
+        <div class="col-md-12 mb-4">
+            <div class="card">
+                <div class="row mt-2 mb-2 m-2 mx-2">
+                    <h5>Filtrar productos por categorias.</h5>
 
-                        <div class="row g-0">
-                            <div class="col-auto">
-                                <label for="nroProductos" class="col-form-label">Mostrar: </label>
-                            </div>
-                            <div class="col-auto">
-                                <select name="nroProductos" id="nroProductos" class="form-select">
-                                    <option value="10">10</option>
-                                    <option value="25">25</option>
-                                    <option value="50">50</option>
-                                </select>
-                            </div>
-                            <div class="col-auto">
-                                <label for="nroProductos" class="col-form-label"> productos</label>
-                            </div>
-                            <div class="col-4"></div>
-                            <div class="col-auto">
-                                <select id="cboCategoria" class="form-select" aria-label="Default select example">
-                                </select>
-                            </div>
-                            <div class="col-auto">
-                                <button id="btnAplicarFiltros" class="btn btn-outline-primary btn-block">
-                                    <i class="fas fa-filter"></i>Aplicar Filtro
-                                </button>
-                            </div>
+                    <div class="row g-0">
+                        <div class="col-auto">
+                            <label for="nroProductos" class="col-form-label">Mostrar: </label>
                         </div>
-
+                        <div class="col-auto">
+                            <select name="nroProductos" id="nroProductos" class="form-select">
+                                <option value="10">10</option>
+                                <option value="25">25</option>
+                                <option value="50">50</option>
+                            </select>
+                        </div>
+                        <div class="col-auto">
+                            <label for="nroProductos" class="col-form-label"> productos</label>
+                        </div>
+                        <div class="col-4"></div>
+                        <div class="col-auto">
+                            <select id="cboCategoria" class="form-select" aria-label="Default select example">
+                            </select>
+                        </div>
+                        <div class="col-auto">
+                            <button id="btnAplicarFiltros" class="btn btn-outline-primary btn-block">
+                                <i class="fas fa-filter"></i>Aplicar Filtro
+                            </button>
+                        </div>
                     </div>
+
                 </div>
             </div>
-            <div class="row">
-                <div id="mostrarProducto" class="col-lg-12">
-                    <div class="card mb-3">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="#" class="img-fluid rounded-start" height="100" width="100" alt="Alternate Text" />
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card with an image on left</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                            </div>
-
+        </div>
+        <div class="row">
+            <div id="mostrarProducto" class="col-lg-12">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="#" class="img-fluid rounded-start" height="100" width="100" alt="Alternate Text" />
                         </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card with an image on left</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -81,53 +79,6 @@
             });
         }
 
-        @*function MostrarProductos(CategoriaSeleccionadaId) {
-            jQuery.ajax({
-                url: "@Url.Action("ListarProductos","Tienda")",
-                type: "POST",
-                dataType: "json",
-                data: JSON.stringify({ CategoriaId: CategoriaSeleccionadaId }),
-                contentType: "application/json; chartset=utf-8",
-                success: function (response) {
-                    $("#mostrarProducto").html("");
-                    $("#mostrarProducto").LoadingOverlay("hide");
-                    console.log(response);
-                    $.each(response.data, function (index, elemento) {
-                        console.log(elemento);
-                        $("<div>").addClass("col mb-5").append(
-                            $("<div>").addClass("card h-100").append(
-                                //TO DO Buscar como poder mostrar la imagen
-                                $("<img>").addClass("img-fluid rounded-start").height(120).width(120).attr({ "src": "data:image/jpeg;base64," + elemento.Imagen }),
-                                $("<div>").addClass("card-body p-4").append(
-                                    $("<div>").addClass("text-center").append(
-                                        $("<h5>").addClass("fw-bolder").text(elemento.NombreProducto),
-                                        "$ " + elemento.PrecioUnitario.toFixed(2)
-                                    )
-                                ),
-                                $("<div>").addClass("card-footer p-4 pt-0 border-top-0 bg-transparent").append(
-                                    $("<div>").addClass("d-grid gap-2").append(
-                                        @if (Session["Correo"]!=null)
-                                            {
-                                            @:$("<button>").addClass("btn btn-success mt-auto agregarCarrito").data("productoid", elemento.ProductoId).text("Agregar a Carrito"),
-
-                                            }
-                                        $("<a>").addClass("btn btn-outline-secondary btn-block mt-auto").attr({ "href": "@Url.Action("DetalleProducto","Tienda")" + "?productoId=" + elemento.ProductoId }).text("Ver Detalle")
-                                    )
-                                )
-                            )
-                        ).appendTo("#mostrarProducto");
-                    });
-                },
-                beforeSend: function () {
-                    $("#mostrarProducto").LoadingOverlay("show");
-                },
-                error: function () {
-
-                }
-            });
-        }*@
-
-
         $("#btnAplicarFiltros").click(function (jsonCategoria) {
             var select = document.getElementById("cboCategoria");
             var categoriaSeleccionadaId = select.options[select.selectedIndex].value;
@@ -142,8 +93,6 @@
                 console.log($(this).data('productoid'));
                 debugger;
             });
-
-
 
         function MostrarProductos(CategoriaSeleccionadaId) {
             jQuery.ajax({
@@ -163,7 +112,7 @@
                         	    $("<div>").addClass("card mb-3 ").append(
                                     $("<div>").addClass("row g-0 ").append(
                                         $("<div>").addClass("col-auto").append(
-                                            $("<img>").addClass("img-fluid rounded-start").height(120).width(120).attr({ "src": "data:image/jpeg;base64," + elemento.Imagen }),
+                                            $("<img>").addClass("img-fluid rounded-start m-1 mt-1").height(120).width(120).attr({ "src": "data:image/jpeg;base64," + elemento.Imagen }),
                                         ),
                                         $("<div>").addClass("col-auto ").append(
                                             $("<div>").addClass("card-body").append(
@@ -201,15 +150,6 @@
                 }
             });
         }
-
-
-
-
-
-
-
-
-
 
     </script>
 }
