--- a/Jardines2022.Web/Views/Shared/_Layout.cshtml
+++ b/Jardines2022.Web/Views/Shared/_Layout.cshtml
@@ -46,7 +46,6 @@
 
         <div class="d-flex align-items-center justify-content-between">
             <a href="@Url.Action("Index","Home")" class="logo d-flex align-items-center">
-                <img src="~/Content//img/logo.png" alt="">
                 <span class="d-none d-lg-block">Jardines Verdes</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -73,7 +72,7 @@
     <li class="nav-item dropdown pe-3">
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="~/Content/assets/img/user.png" alt="Profile" class="rounded-circle">
+            <img src="~/Content/assets/img/Usuarios/user.png" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2">Invitado</span>
         </a><!-- End Profile Iamge Icon -->
 
@@ -271,13 +270,8 @@ else
                     </a>
                     <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                         <li>
-                            <a href="charts-chartjs.html">
+                            <a href="@Url.Action("Carrito","Carrito")">
                                 <i class="bi bi-circle"></i><span>Carrito</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="charts-apexcharts.html">
-                                <i class="bi bi-circle"></i><span>Detalle Carrito</span>
                             </a>
                         </li>
                     </ul>
@@ -304,13 +298,8 @@ else
                     </a>
                     <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                         <li>
-                            <a href="charts-chartjs.html">
+                            <a href="@Url.Action("Carrito","Carrito")">
                                 <i class="bi bi-circle"></i><span>Carrito</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="charts-apexcharts.html">
-                                <i class="bi bi-circle"></i><span>Detalle Carrito</span>
                             </a>
                         </li>
                     </ul>
