--- a/Jardines2022.Web/Views/Tienda/DetalleProducto.cshtml
+++ b/Jardines2022.Web/Views/Tienda/DetalleProducto.cshtml
@@ -14,27 +14,34 @@
                     <span>$@Html.DisplayTextFor(m => m.PrecioUnitario)</span>
                 </div>
                 <p class="lead">Stock @Html.DisplayTextFor(m => m.UnidadesEnStock)</p>
-                <div class="d-flex">
-                    <a href="@Url.Action("Tienda", "Tienda")" class="btn btn-success w-25 mx-2">
-                        Volver
-                    </a>
+                <div class="row">
                     @if (Session["Correo"] != null)
                     {
                         using (Html.BeginForm("AgregarMultiple", "Carrito", FormMethod.Post))
                         {
                             @Html.AntiForgeryToken()
-
-                            <div style="float:right">
-                                @Html.Hidden("productoId", Model.ProductoId)
-                                @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-                                <input class="form-control text-center" id="Cantidad" name="Cantidad" type="number" value="1" />
-                                <input type="submit" class="btn btn-success" value="Agregar" />
+                            <div>
+                                <table>
+                                    <tr>
+                                        @Html.Hidden("productoId", Model.ProductoId)
+                                        @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+                                        <td>
+                                            <a href="@Url.Action("Tienda", "Tienda")" class="btn btn-success">Volver</a>
+                                        </td>
+                                        <td>
+                                            <input class="form-control-color text-center" id="Cantidad" name="Cantidad" type="number" value="1" />
+                                        </td>
+                                        <td>
+                                            <input type="submit" class="btn btn-success" value="Agregar"/>
+                                        </td>
+                                    </tr>
+                                </table>
                             </div>
                         }
                         @*<button class="btn btn-primary flex-shrink-0 w-50 agregarCarrito" id="agregarCarrito" type="button" data-productoId="@Html.DisplayTextFor(m => m.ProductoId)">
-                            <i class="fas fa-cart-plus"></i>
-                            Agregar al Carrito
-                        </button>*@
+                <i class="fas fa-cart-plus"></i>
+                Agregar al Carrito
+            </button>*@
                     }
                 </div>
             </div>
