--- a/Jardines2022.Web/Views/Tienda/Tienda.cshtml
+++ b/Jardines2022.Web/Views/Tienda/Tienda.cshtml
@@ -88,7 +88,7 @@
             MostrarProductos(categoriaSeleccionadaId);
         });
         //AGREGAR AL CARRITO
-        $(document).on("click", "button.AgregarAlCarrito", function (jsonProducto) {
+        $(document).on("click", "button.AgregarAlCarrito", function () {
             var ID = $(this).data('productoid');
             console.log(ID);
             debugger;
